gobmkida/g0/sgffile_begindump
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/sgffile_begindump/src/engine/sgffile.c:589:17: error: use of undeclared identifier 'local_tree_0'
sgf_dumptree = &local_tree_0; 
                ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/sgffile_begindump/src/engine/sgffile.c:590:10: error: expected expression
tcmalloc::TList<tcmalloc::Span>::Elem::Elem( sgf_dumptree); 
         ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/sgffile_begindump/src/obj/1/sgffile.o] Error 1
